env/code_53f1e054e0d2b/stderr.txt
  File "main.py", line 3
    >>> list = [2, 4, 6, 8]
     ^
SyntaxError: invalid syntax
